Fixed image clipping

--- a/stylesheets/post-content.css
+++ b/stylesheets/post-content.css
@@ -41,6 +41,7 @@
     background-color: var(--old-gold);
 }
 .post-img-container {
+    width: auto;
     overflow: hidden;
     padding: 0px;
     object-fit: cover;
@@ -63,7 +64,6 @@
     align-items: center;
     border-radius:14px;
     border: 3px solid black;
-    margin-left: 15px;
     background-color: var(--ivory-white);
 }
 .grade {
@@ -86,7 +86,7 @@
 .post-text-container {
     height: 90%;
     width: 50%;
-    margin-left: 15px;
+    margin-left: 20px;
     margin-right: 15px;
     display: flex;
     flex-direction: column;
@@ -126,13 +126,14 @@
         display: none;
     }
     .post-stats {
-        width: 40%;
+        width: 35%;
         height: 90%;
+        margin: 0px;
     }
     .post-img-container {
         height: 90%;
-        width: 40%;
-        margin-left: 0px;
+        margin: 0px;
+        margin-right: 10px;
     }
     .post-container {
         justify-content: center;
@@ -157,8 +158,8 @@
     }
     .post-img-container {
         height: 90%;
-        width: 20%;
         margin-left: 15px;
+        margin-right: 15px;
     }
     .post-container {
         justify-content: flex-start;
